--- a/.gitignore
+++ b/.gitignore
@@ -347,3 +347,4 @@ healthchecksdb
 /Assets/SampleGame/Particles
 /Assets/SampleGame/Scenes
 /Assets/SampleGame/Textures
+/Assets/LevelManagement/Prefabs
