--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -65,6 +65,11 @@
   <ItemGroup>
     <Compile Include="Assets\LevelManagement\Scripts\Menu.cs" />
     <Compile Include="Assets\LevelManagement\Scripts\MenuManager.cs" />
+    <Compile Include="Assets\LevelManagement\Scripts\Menus\CreditsScreen.cs" />
+    <Compile Include="Assets\LevelManagement\Scripts\Menus\GameMenu.cs" />
+    <Compile Include="Assets\LevelManagement\Scripts\Menus\MainMenu.cs" />
+    <Compile Include="Assets\LevelManagement\Scripts\Menus\PauseMenu.cs" />
+    <Compile Include="Assets\LevelManagement\Scripts\Menus\SettingsMenu.cs" />
     <Compile Include="Assets\SampleGame\Scripts\GameManager.cs" />
     <Compile Include="Assets\SampleGame\Scripts\GoalEffect.cs" />
     <Compile Include="Assets\SampleGame\Scripts\Objective.cs" />
